--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
     <!-- Hero Section Start  -->
-    <section id="home" class="pt-36">
+    <section id="home" class="pt-36 animate-fadeIn">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 lg:w-1/2 ">
@@ -277,8 +277,6 @@
             <p class="text-lg text-white">Porftolio 2024 by Rama Adji Prasetyo created with <a href="https://tailwindcss.com/" class="hover:underline text-blue-400">TailwindCSS</a> </p>
         </div>
     </section>
-
-    </footer>
     <!-- Footer End -->
     
 
