--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Journey into Android and Mobile Innovation</h2>
                     <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">As an undergraduate informatics engineering student, I am currently focusing on mobile development, with a particular emphasis on Android. My studies involve mastering Android architecture, including MVVM patterns, and integrating machine learning to create intelligent and responsive applications. Through my coursework and hands-on projects, I am developing a deep understanding of modern mobile development practices and tools. This journey is enhancing my ability to design and implement innovative solutions that push the boundaries of mobile technology.</p>
                 </div>
-                <div class="w-full px-4 lg:w-1/2 md:mb-10">
+                <div class="w-full px-4 lg:w-1/2 mb-10">
                     <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Lets Connect!</h3>
                     <p class="font-medium text-base text-secondary mb-6 lg:text-lg"> Whether you have questions about my work, want to discuss mobile development, or just want to network, feel free to reach out. I'm always excited to connect with like-minded professionals and enthusiasts. Lets explore opportunities and ideas together!</p>
                     <div class="flex items-center">
