--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
     <!-- Education section end -->
 
     <!-- Footer Start -->
-    <section id="footer" class="bg-slate-600">
+    <footer class="bg-slate-600">
         <div class="text-center p-9">
-            <p class="text-lg text-white">Porftolio 2024 by Rama Adji Prasetyo created withgot<a href="https://tailwindcss.com/" class="hover:underline text-blue-400"> TailwindCSS</a> </p>
+            <p class="text-lg text-white">Porftolio 2024 by Rama Adji Prasetyo created with<a href="https://tailwindcss.com/" class="hover:underline text-blue-400"> TailwindCSS</a> </p>
         </div>
-    </section>
+    </footer>
     <!-- Footer End -->
     
 
