--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                     </button>
 
-                    <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                    <nav id="nav-menu" class="font-semibold hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="#home" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Home</a>
@@ -117,7 +117,7 @@
             </div>
             <div class="div w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="div mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden xl:h-96 hover:scale-110 transition-transform">
+                    <div class="rounded-md shadow-md overflow-hidden hover:scale-110 transition-transform">
                         <img src="dist/img/porto/Valorant.png" alt="Valorant Agent" width="w-full"/>
                     </div>
                     <div class="flex items-center justify-between">
@@ -140,10 +140,10 @@
                     </div>
                 </div>
                 <div class="div mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden xl:h-96 hover:scale-110 transition-transform">
-                        <img src="dist/img/porto/Asclepius.png" alt="Asclepius" width="w-full"/>
+                    <div class="rounded-md shadow-md overflow-hidden hover:scale-110 transition-transform">
+                        <img src="dist/img/porto/Asclepius.png" alt="Asclepius" width="w-full" class="my-auto"/>
                     </div>
-                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Skin Cancer Detector</h3>
+                    <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Cancer Detector</h3>
                     <p class="font-medium text-base text-secondary">An android application made to complete a class at Dicoding, this application has a skin cancer classification feature based on images, using a tensorflow model that has been converted to tensorflow lite. another feature is that it can display cancer-related news using 
                         <a href="https://newsapi.org/" class="text-blue-500 hover:underline" target="_blank">NewsAPI</a> and Retrofit library.</p>
                     <div class="flex items-center mt-2">
@@ -159,8 +159,8 @@
                     </div>
                 </div>
                 <div class="div mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden xl:h-96 hover:scale-125 transition-transform">
-                        <img src="dist/img/porto/Storytopia.png" alt="Storytopia" width="w-full"/>
+                    <div class="rounded-md shadow-md overflow-hidden hover:scale-110 transition-transform">
+                        <img src="dist/img/porto/Storytopia.png" alt="Storytopia" width="w-full" class="py-1"/>
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Storytopia</h3>
                     <p class="font-medium text-base text-secondary">Project created to fulfill classes in Dicoding, this application has several features, namely login and create an account, users can create posts using images. this application also uses the Google Maps API which is useful for finding posts based on the user's area.</p>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="div mb-12 p-4 md:w-1/2">
-                    <div class="rounded-md shadow-md overflow-hidden xl:h-96 hover:scale-110 transition-transform">
+                    <div class="rounded-md shadow-md overflow-hidden hover:scale-110 transition-transform">
                         <img src="dist/img/porto/Sebatik.png" alt="Sebatik" width="w-full"/>
                     </div>
                     <div class="flex items-center justify-between">
@@ -218,7 +218,7 @@
                         <div class="m-auto sm:p-3">
                             <img src="dist/img/Logo_Unindra__Universitas_Indraprasta_PGRI__Original_PNG-removebg-preview.png" alt="Unindra" width="200">
                         </div>
-                        <div class="col-span-3 text-left text-white my-auto">
+                        <div class="col-span-3 text-left text-white my-2">
                             <div class="flex items-center justify-between mr-2">
                                 <h3 class="text-2xl">Indraprasta PGRI University</h3>
                                 <p class="text-sm">2021 - <span class="italic">present</span> </p>
@@ -228,6 +228,7 @@
                                 <li>Explored the art of organizing and managing data through versatile structures like arrays, linked lists, and trees, unlocking new levels of efficiency.</li>
                                 <li>Dive into building and maintaining dynamic websites and web applications, mastering HTML, CSS, and JavaScript to bring engaging digital experiences to life.</li>
                                 <li>Crafted and refined step-by-step algorithms, designing innovative solutions to complex computational problems with precision and creativity.</li>
+                                <li>Gained expertise in designing, implementing, and querying relational databases to effectively handle and manage large volumes of data. Developed skills in SQL and database normalization to ensure data integrity and optimize performance.</li>
                             </ul>
                         </div>
                     </div>
@@ -242,8 +243,8 @@
                             </div>
                             <p>Mobile Development Cohort</p>
                             <ul class="list-disc ml-4 text-base mr-2">
-                                <li> Achieved academic excellence by graduating with <span class="font-extrabold">Distinction</span>, reflecting my deep understanding and exceptional performance in my Android Development studies.</li>
-                                <li> studied advanced mobile development techniques at Bangkit Academy, gaining hands-on experience with cutting-edge tools and frameworks to build innovative and high-performance applications.</li>
+                                <li>Achieved academic excellence by graduating with <span class="font-extrabold">Distinction</span>, reflecting my deep understanding and exceptional performance in my Android Development studies.</li>
+                                <li>studied advanced mobile development techniques at Bangkit Academy, gaining hands-on experience with cutting-edge tools and frameworks to build innovative and high-performance applications.</li>
                                 <li>Learning about Android architecture with MVVM for scalable app development and explored machine learning implementation to enhance app functionality and user experience.</li>
                             </ul>
                         </div>
@@ -273,8 +274,11 @@
 
     <!-- Footer Start -->
     <footer class="bg-slate-600">
-        <div class="text-center p-9">
-            <p class="text-lg text-white">Porftolio 2024 by Rama Adji Prasetyo created with<a href="https://tailwindcss.com/" class="hover:underline text-blue-400"> TailwindCSS</a> </p>
+        <div class="p-9 flex items-center justify-center">
+            <p class="text-lg text-white">Porftolio 2024 by Rama Adji Prasetyo built with <a href="https://tailwindcss.com/" class="hover:underline text-sky-400">TailwindCSS</a></p>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" class="ml-1" viewBox="0 0 48 48">
+                <path fill="#00acc1" d="M24,9.604c-6.4,0-10.4,3.199-12,9.597c2.4-3.199,5.2-4.398,8.4-3.599 c1.826,0.456,3.131,1.781,4.576,3.247C27.328,21.236,30.051,24,36,24c6.4,0,10.4-3.199,12-9.598c-2.4,3.199-5.2,4.399-8.4,3.6 c-1.825-0.456-3.13-1.781-4.575-3.247C32.672,12.367,29.948,9.604,24,9.604L24,9.604z M12,24c-6.4,0-10.4,3.199-12,9.598 c2.4-3.199,5.2-4.399,8.4-3.599c1.825,0.457,3.13,1.781,4.575,3.246c2.353,2.388,5.077,5.152,11.025,5.152 c6.4,0,10.4-3.199,12-9.598c-2.4,3.199-5.2,4.399-8.4,3.599c-1.826-0.456-3.131-1.781-4.576-3.246C20.672,26.764,17.949,24,12,24 L12,24z"></path>
+                </svg>
         </div>
     </footer>
     <!-- Footer End -->
